Implementation of text styles started in QDiagramDraw

--- a/qdiagramdraw/qdiagramdraw.vcproj
+++ b/qdiagramdraw/qdiagramdraw.vcproj
@@ -805,7 +805,147 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\resources\brick.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\bricks.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="resources\cut.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\error.png"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\exclamation.png"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\gear_in.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\object_method.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\object_property.ico"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -954,7 +1094,7 @@
 						Name="VCCustomBuildTool"
 						Description="Rcc&apos;ing $(InputFileName)..."
 						CommandLine="&quot;$(QTDIR)\bin\rcc.exe&quot; -name &quot;$(InputName)&quot; -no-compress &quot;$(InputPath)&quot; -o .\GeneratedFiles\qrc_$(InputName).cpp&#x0D;&#x0A;"
-						AdditionalDependencies="$(InputPath);.\resources\actor48.ico;.\resources\usecase.ico;.\resources\cut.ico;.\resources\page_copy.ico;.\resources\page_paste.ico;.\resources\arrow_refresh.ico;.\resources\page.ico;.\resources\page_edit.ico;.\resources\page_save.ico;.\resources\printer.ico;.\resources\arrow_redo.ico;.\resources\arrow_refresh.ico;.\resources\arrow_undo.ico;.\resources\application_cascade.ico;.\resources\application_view_tile.ico;.\resources\shape_move_back.ico;.\resources\shape_move_backwards.ico;.\resources\shape_move_forwards.ico;.\resources\shape_move_front.ico"
+						AdditionalDependencies="$(InputPath);.\resources\actor48.ico;.\resources\usecase.ico;.\resources\cut.ico;.\resources\page_copy.ico;.\resources\page_paste.ico;.\resources\arrow_refresh.ico;.\resources\page.ico;.\resources\page_edit.ico;.\resources\page_save.ico;.\resources\printer.ico;.\resources\arrow_redo.ico;.\resources\arrow_refresh.ico;.\resources\arrow_undo.ico;.\resources\application_cascade.ico;.\resources\application_view_tile.ico;.\resources\shape_group.ico;.\resources\shape_ungroup.ico;.\resources\gear_in.ico;.\resources\brick.ico;.\resources\shape_move_back.ico;.\resources\script.ico;.\resources\script_edit.ico;.\resources\shape_move_backwards.ico;.\resources\shape_move_forwards.ico;.\resources\shape_move_front.ico;.\resources\text_bold.ico;.\resources\text_italic.ico;.\resources\text_strikethroungh.ico;.\resources\text_underline.ico;.\resources\error.png;.\resources\exclamation.png;.\resources\object_property.ico;.\resources\bricks.ico;.\resources\object_method.ico"
 						Outputs=".\GeneratedFiles\qrc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -965,8 +1105,68 @@
 						Name="VCCustomBuildTool"
 						Description="Rcc&apos;ing $(InputFileName)..."
 						CommandLine="&quot;$(QTDIR)\bin\rcc.exe&quot; -name &quot;$(InputName)&quot; -no-compress &quot;$(InputPath)&quot; -o .\GeneratedFiles\qrc_$(InputName).cpp&#x0D;&#x0A;"
-						AdditionalDependencies="$(InputPath);.\resources\actor48.ico;.\resources\usecase.ico;.\resources\cut.ico;.\resources\page_copy.ico;.\resources\page_paste.ico;.\resources\arrow_refresh.ico;.\resources\page.ico;.\resources\page_edit.ico;.\resources\page_save.ico;.\resources\printer.ico;.\resources\arrow_redo.ico;.\resources\arrow_refresh.ico;.\resources\arrow_undo.ico;.\resources\application_cascade.ico;.\resources\application_view_tile.ico;.\resources\shape_move_back.ico;.\resources\shape_move_backwards.ico;.\resources\shape_move_forwards.ico;.\resources\shape_move_front.ico"
+						AdditionalDependencies="$(InputPath);.\resources\actor48.ico;.\resources\usecase.ico;.\resources\cut.ico;.\resources\page_copy.ico;.\resources\page_paste.ico;.\resources\arrow_refresh.ico;.\resources\page.ico;.\resources\page_edit.ico;.\resources\page_save.ico;.\resources\printer.ico;.\resources\arrow_redo.ico;.\resources\arrow_refresh.ico;.\resources\arrow_undo.ico;.\resources\application_cascade.ico;.\resources\application_view_tile.ico;.\resources\shape_group.ico;.\resources\shape_ungroup.ico;.\resources\gear_in.ico;.\resources\brick.ico;.\resources\shape_move_back.ico;.\resources\script.ico;.\resources\script_edit.ico;.\resources\shape_move_backwards.ico;.\resources\shape_move_forwards.ico;.\resources\shape_move_front.ico;.\resources\text_bold.ico;.\resources\text_italic.ico;.\resources\text_strikethroungh.ico;.\resources\text_underline.ico;.\resources\error.png;.\resources\exclamation.png;.\resources\object_property.ico;.\resources\bricks.ico;.\resources\object_method.ico"
 						Outputs=".\GeneratedFiles\qrc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\script.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\script_edit.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\shape_group.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
 					/>
 				</FileConfiguration>
 			</File>
@@ -1032,6 +1232,106 @@
 			</File>
 			<File
 				RelativePath=".\resources\shape_move_front.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\shape_ungroup.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\text_bold.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\text_italic.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\text_strikethroungh.ico"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\resources\text_underline.ico"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
